# GEOSgcm_App

./: .AGCM.rc.tmpl.swp  .AGCM_VERSION  .gcm_setup.swp  .gitattributes  .gitignore  AGCM.SFE25.rc  AGCM.rc.tmpl  CAP.SFE25.rc  CAP.rc.tmpl  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  GCMPROG.rc.tmpl  GCMTRAJ.rc.tmpl  GEOSgcm.F90  HISTAENS.rc.tmpl  HISTFDDA.rc.tmpl  HISTFDDAL.rc.tmpl  HISTORY.AGCM.rc.tmpl  HISTORY.AOGCM-MOM5.rc.tmpl  HISTORY.AOGCM-MOM6.rc.tmpl  HISTORY.AOGCM.rc.tmpl  HISTORY.AOGCM_MITgcm.rc.tmpl  HISTORY.ASAIAAQ.rc.tmpl  HISTORY.ASIAAQ.rc.tmpl  HISTORY.BENCHMARK.rc.tmpl  HISTORY.DATAATM.rc.tmpl  HISTORY.RADVAL.rc.tmpl  HISTORY.S2S.rc.tmpl  HISTORY.SFE25.rc  HISTORY.rc.tmpl  HISTORY_FP.rc.03z.tmpl  HISTORY_FP.rc.09z.tmpl  HISTORY_FP.rc.15z.tmpl  HISTORY_FP.rc.21z.tmpl  HISTORY_GEOSCHEMCHEM.rc.tmpl  HISTORY_GEOSIT.rc.tmpl  HISTORY_GMICHEM.rc.tmpl  HISTORY_MERRA2-DD.rc.tmpl  (+66 more)
.circleci/: config.yml
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: auto_pr_to_mapl3.md  auto_pr_to_v11mapl3.md
.github/workflows/: push-to-develop.yml  push-to-v12.yml  spack-ci.yml  validate_yaml_files.yml  workflow.yml
CPLFCST_Etc/: Readme  ReadmeSEASONAL  Readme_subX  clean_one_hindcast.sh  convertMERRA2rst.sh  do_one_forecast.sh  do_one_hindcast.sh  fcst_clean_Interim_360.sh  fcst_start_Interim_360S2S.sh  fvcore_pert.f  fvcore_pert.sh  moist_pert.f  moist_pert.sh  monitor_SEASONAL.sh  monitor_hindcastSEASONAL.sh  monitor_ssnXensX.sh  monitor_subXensX.sh  perturbMERRA2rst.sh  perturb_atm.sh  proc_diag_fcst.csh  remove_Interim_fcst360.sh  s2sfcsts_check_and_run.csh  s2sfcsts_dates.txt  s2sfcsts_ic_check.py  subXdo_one_forecast.sh  subXs2sfcsts_check_and_run.csh  subXs2sfcsts_dates.txt  subXsubmit_forecast.sh  subXsubmit_hindcast.sh  submit_Interim_fcst360.sh  submit_cleanSEASONAL.sh  submit_forecastSEASONAL.sh  submit_hindcastSEASONAL.sh
CPLFCST_Etc/RC/: BC_GridComp_ExtData-clim.rc  CO_GridComp_ExtData-clim.rc  NI_GridComp_ExtData-clim.rc  OC_GridComp_ExtData-clim.rc  SU_GridComp_ExtData-clim.rc
CPLFCST_Etc/pert/: Makefile  Makefile4norm  Readme  cal_norm4rst_savebv.f90  make_pert_rst.sh  modules.f90  perturb_aogcm.f90
GEOSgcm_App/: .AGCM_VERSION  CMakeLists.txt  ChangeLog  HISTFDDAL.rc.tmpl  HISTORY.AGCM.rc.tmpl  HISTORY.rc.tmpl  HISTORY_FP.rc.03z.tmpl  HISTORY_FP.rc.15z.tmpl  HISTORY_MERRA2.rc.tmpl  HISTORY_MERRA_CFIO.rc.tmpl  IDFUPD.rc.tmpl  README.agcm  gcm_CPLFCST360S2S_setup  gcm_archive.j  gcm_archive_CPLFCST.j  gcm_forecast.setup  gcm_forecast.tmpl  gcm_moveplot.j  gcm_plot.tmpl  gcm_post.j  gcm_post_full_CPLFCST.j  gcm_post_part_CPLFCST.j  gcm_quickplot.csh  stratchem_setup
UMD_Etc/UMD_oletkf/: common_letkf.f90  common_mom4.f90  common_mpi_mom4.f90  common_mtx.f90  common_obs_mom4.f90  letkf.f90  letkf_local.f90  letkf_obs.f90  letkf_tools.f90  obsop.f90  oceanobs_nc2bin.f90  params_letkf.f90  params_model.f90  params_obs.f90  vars_model.f90
UMD_Etc/UMD_rc/: AGCM.rc  CAP.rc  HISTORY.rc  HISTORY_REINIT.rc  diag_table  fix_gcm_run.csh  gcm_run.j  input.nml  input_aice.nml  input_hice.nml  input_prof.nml  input_seaice.nml  input_ssh.nml  input_sst.nml  input_surf.nml  readme_odas  readme_odas_reinit  recenter_tmp.nml  setup_odas.csh  setup_reinit.j
UMD_Etc/UMD_utils/: Readme_SA  ana2model.py  anaice2rst.f90  bytemaps.py  check_temp_salt.f90  cice_hack.py  dynamic_height.py  get_slv_offset.py  gmi_daily_v8.py  mean_ods.csh  mean_ods.py  merra2_sbc.py  ocean_iau.f90  ocean_letkf_nml.py  ocean_moments.f90  ocean_obs.py  ocean_obs_utils.py  ocean_recenter.f90  ocean_recenter_utils.f90  ocean_sponge.py  ocnice_utils.f90  read_bin.f90  read_l2_gmi_rss.py  rst2hist.py  (+2 more)
gcmpy/: CMakeLists.txt  README.md  jinjafy.py  run_gcm_run.py  run_gcm_setup.py  sync.sh
gcmpy/gcmpy/: CMakeLists.txt
gcmpy/gcmpy/batch_tools/: :q  CMakeLists.txt  batch_environ.py  computing_sites.py  interactive_env.py  ioserver.py  node_ops.py  pbs_catalog.yaml  pbs_env.py  settings_AWS.yaml  settings_NAS.yaml  settings_NCCS.yaml  settings_Other.yaml  site_nodes.yaml  slurm_catalog.yaml  slurm_env.py
gcmpy/gcmpy/batch_tools/templates/: CMakeLists.txt  gcm_plot_pbs.j.tmpl  gcm_plot_slurm.j.tmpl  gcm_post_pbs.j.tmpl  gcm_post_slurm.j.tmpl  gcm_run_batch_script.j.tmpl  gcm_run_pbs.j.tmpl  gcm_run_slurm.j.tmpl  read_batch_tmpl.py
gcmpy/gcmpy/geos_settings/: CMakeLists.txt  computing_sites.py  horizontal_res_settings.yaml  horizontal_resolution.py  hres_catalog.yaml  platform_catalog.yaml
gcmpy/gcmpy/run_tools/: CMakeLists.txt  agcm_file_ops.py  cap_files_ops.py  cpu_node_ops.py  dir_creation_ops.py  history_file_ops.py  rc_parser.py  restart_file_ops.py  scratchdir_ops.py
gcmpy/gcmpy/setup_tools/: CMakeLists.txt  atmosphere.py  clone.py  generate_question.py  geos_ops.py  gocart.py  land.py  ocean.py  process_questions.py  setup_envs.py  setup_main.py
gcmpy/gcmpy/setup_tools/config/: CMakeLists.txt  directory_setup.yaml  load_questions.py  mpi_config.yaml
gcmpy/gcmpy/setup_tools/questions/: CMakeLists.txt
gcmpy/gcmpy/utils/: CMakeLists.txt  clock_ops.py  color_ops.py  file_ops.py  logger_ops.py  path_ops.py  regex_ops.py  run_cmd_ops.py  slurm_ops.py  strip_name.py  yaml_ops.py
gcmpy/gcmpy_doc/: CMakeLists.txt
gcmpy/gcmpy_tests/: CMakeLists.txt
gcmpy/gcmpy_tests/gcmpy/: CMakeLists.txt
gcmpy/gcmpy_tests/gcmpy/batch_tools/: CMakeLists.txt  test_node_ops.py
gcmpy/gcmpy_tests/gcmpy/geos_settings/: CMakeLists.txt  test_node_ops.py
gcmpy/gcmpy_tests/gcmpy/run_tools/: CMakeLists.txt  test_cap_files_ops.py
gcmpy/gcmpy_tests/gcmpy/utils/: CMakeLists.txt  test_clock_ops.py  test_file_ops.py  test_path_ops.py  test_regex_ops.py  test_run_cmd_ops.py  test_yaml_ops.py
gcmpy/scripts/: .model.py.swp  CMakeLists.txt  atmosphere.py  clone.py  env.py  gcm_setup.py  generate_question.py  gocart.py  land.py  model.py  ocean.py  process_questions.py  test_generate_question.py  utility.py
gcmpy/yaml/: CMakeLists.txt  atmospheric_model.yaml  directory_setup.yaml  exp_setup.yaml  gocart.yaml  land_model.yaml  mpi_config.yaml  ocean_model.yaml
src/: CMakeLists.txt  GEOSgcm.F90
(+48 files in other folders)
